# dotfiles

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  AGENTS.md  COMMIT_MSG-nix-changes.md  COMMIT_MSG.md  MACHINES.md  NIX_DARWIN_APPLICATION_PLAN.md  PROJECT.md  PROJECT_DASHBOARD.md  README.md  adrs.toml  codebook.toml  flake.nix  justfile  makefile  module-review  nix.custom.conf  package-lock.json  package.json  sgconfig.yml
.ai/: README.md  learn.md
.ai/experiments/mcp-proxy/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.ai/experiments/mcp-proxy/config/: otel-collector-config.yaml  prometheus.yml
.ai/experiments/mcp-proxy/config/grafana/provisioning/datasources/: datasources.yml
.ai/experiments/mcp-proxy/src/: main.rs
.beads/: config.yaml  issues.jsonl  metadata.json  routes.jsonl
.build/: .gitignore  justfile  stow.Dockerfile  zsh.Dockerfile
.claude/: CLAUDE.local.md  CLAUDE.md  README.md  TODO.md  index.md  justfile  settings.example.json  settings.json  settings.json.ignore
.context/: CLAUDE.local.tree-sitter.md  CLAUDE.superclaude.md  INDEX.md
.data/: .gitignore  bookmarks.yaml  brew.json  completions.json  completions.yaml  fpaths.json  git-hooks.json  hosts.json  initilizations.json  initilizations.yaml  installs.json  justfile  kube.json  libraries.json  libraries.md  licenses.json  man.json  merged.json  new.json  paths.json  powershell.yaml  rabbits.json
.docs/: justfile
.github/: FUNDING.yml
.meta/: .fdignore  justfile  schema.cue  schema.cypher  schema.json
services/databases/meilisearch/indices/scripts/: collect.py  pyproject.toml  pytest.ini
services/databases/meilisearch/indices/scripts/collectors/: MISSING_FEATURES.md  __init__.py  auth.py  base.py  coverage.py  coverage_baseline.json  detection.py  models.py  rate_limit.py  registries.yaml  registry_claims.json  state.py
services/databases/meilisearch/indices/scripts/collectors/methods/: __init__.py  api.py  browser.py  readme.py  scrape.py  search.py
services/databases/meilisearch/indices/scripts/collectors/registries/: __init__.py  awesome.py  buildwithclaude.py  claudemarketplaces.py  github.py  mcp_so.py  mcpservers.py  skillsmp.py  smithery.py
services/databases/meilisearch/indices/scripts/collectors/tests/: __init__.py  conftest.py  test_base.py  test_models.py
services/databases/meilisearch/indices/scripts/collectors/tests/integration/: test_smithery.py
services/databases/meilisearch/indices/scripts/collectors/tests/integration/fixtures/: smithery_page1.md
(+2159 files in other folders)
